--- a/pgui/tsconfig.json
+++ b/pgui/tsconfig.json
@@ -21,6 +21,8 @@
     // add by cw1997 2020-02-12 13:43:55
     // I don't need the getter & setter method
     "strictPropertyInitialization": false,
+    // setting base url, that makes import path become short
+    "baseUrl": "src"
   },
   "include": [
     "src"
